force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <pluralLabel>Customers</pluralLabel>
    <description>Stores customer demographic, identity (PAN/Aadhaar), and employment/income profiles.</description>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
        
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>