force-app/main/default/objects/Customer__c/fields/Aadhaar_Code__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Code__c</fullName>
    <label>Aadhaar Code</label>
    <type>Text</type>
    <description>12-digit Aadhaar Number. Validated by regex.</description>
    <inlineHelpText>12-digit Aadhaar Number. Validated by regex.</inlineHelpText>
    <length>12</length>
    <unique>true</unique>
    <required>true</required>
</CustomField>