force-app/main/default/objects/Customer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>LongTextArea</type>
    <description>Complete residential address.</description>
    <inlineHelpText>Complete residential address.</inlineHelpText>
    <length>2000</length>
</CustomField>