force-app/main/default/objects/Customer__c/fields/Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Age_Years__c</fullName>
    <label>Age Years</label>
    <type>Number</type>
    <description>Calculates customer age in years based on date of birth.</description>
    <inlineHelpText>Calculates customer age in years based on date of birth.</inlineHelpText>
    <precision>3</precision>
    <scale>0</scale>
    <formula>IF(ISBLANK(Date_Of_Birth__c), 0, YEAR(TODAY()) - YEAR(Date_Of_Birth__c) - IF(OR(MONTH(TODAY()) &lt; MONTH(Date_Of_Birth__c), AND(MONTH(TODAY()) = MONTH(Date_Of_Birth__c), DAY(TODAY()) &lt; DAY(Date_Of_Birth__c))), 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>