force-app/main/default/objects/Customer__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <label>Credit Score</label>
    <type>Number</type>
    <description>Credit score retrieved from credit bureaus (Range: 300 - 850).</description>
    <inlineHelpText>Credit score retrieved from credit bureaus (Range: 300 - 850).</inlineHelpText>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>