force-app/main/default/objects/Customer__c/fields/Customer_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_External_ID__c</fullName>
    <label>Customer External ID</label>
    <type>Text</type>
    <description>Unique identifier for data migration/external system sync.</description>
    <inlineHelpText>Unique identifier for data migration/external system sync.</inlineHelpText>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>