force-app/main/default/objects/Customer__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
    <description>Customer&#x27;s date of birth. Used for age eligibility check.</description>
    <inlineHelpText>Customer&#x27;s date of birth. Used for age eligibility check.</inlineHelpText>
    <required>true</required>
</CustomField>