force-app/main/default/objects/Customer__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
    <description>Primary email address. Checked for uniqueness.</description>
    <inlineHelpText>Primary email address. Checked for uniqueness.</inlineHelpText>
    <required>true</required>
</CustomField>