force-app/main/default/objects/Customer__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <description>Nature of employment contract.</description>
    <inlineHelpText>Nature of employment contract.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
            <value>
                <fullName>Full-Time</fullName>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>