force-app/main/default/objects/Customer__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
    <description>Contact mobile number.</description>
    <inlineHelpText>Contact mobile number.</inlineHelpText>
    <required>true</required>
</CustomField>