force-app/main/default/objects/Customer__c/fields/Monthly_Salary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Salary_Amount__c</fullName>
    <label>Monthly Salary Amount</label>
    <type>Currency</type>
    <description>Customer&#x27;s monthly net take-home salary.</description>
    <inlineHelpText>Customer&#x27;s monthly net take-home salary.</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>