force-app/main/default/objects/Customer__c/fields/PAN_Code__c.field-meta.xml
<CustomField>
    <fullName>PAN_Code__c</fullName>
    <label>PAN Code</label>
    <type>Text</type>
    <description>10-digit Permanent Account Number (PAN). Validated by regex.</description>
    <inlineHelpText>10-digit Permanent Account Number (PAN). Validated by regex.</inlineHelpText>
    <length>10</length>
    <unique>true</unique>
    <required>true</required>
</CustomField>