force-app/main/default/objects/Customer__c/validationRules/Customer_Aadhaar_Format_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Aadhaar_Format_Check</fullName>
    <active>true</active>
    <description>Aadhaar Card number must be exactly 12 numerical digits.</description>
    <errorConditionFormula>AND(NOT($Permission.Bypass_Validation_Rules), NOT(ISBLANK(Aadhaar_Code__c)), NOT(REGEX(Aadhaar_Code__c, &#x27;^[0-9]{12}$&#x27;)))</errorConditionFormula>
    <errorDisplayField>Aadhaar_Code__c</errorDisplayField>
    <errorMessage>Aadhaar Card number must be exactly 12 numerical digits.</errorMessage>
</ValidationRule>