force-app/main/default/objects/Customer__c/validationRules/Customer_Credit_Score_Range_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Credit_Score_Range_Check</fullName>
    <active>true</active>
    <description>Credit Score must be between 300 and 850.</description>
    <errorConditionFormula>AND(NOT($Permission.Bypass_Validation_Rules), OR(Credit_Score__c &lt; 300, Credit_Score__c &gt; 850))</errorConditionFormula>
    <errorDisplayField>Credit_Score__c</errorDisplayField>
    <errorMessage>Credit Score must be between 300 and 850.</errorMessage>
</ValidationRule>