force-app/main/default/objects/Customer__c/validationRules/Customer_Prevent_Underage_Applicants.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Prevent_Underage_Applicants</fullName>
    <active>true</active>
    <description>Customer must be at least 18 years old to apply for a loan.</description>
    <errorConditionFormula>AND(NOT($Permission.Bypass_Validation_Rules), OR(ISBLANK(Date_Of_Birth__c), Age_Years__c &lt; 18))</errorConditionFormula>
    <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
    <errorMessage>Customer must be at least 18 years old to apply for a loan.</errorMessage>
</ValidationRule>